Cannot unpause after pausing - KDE Plasma Media Player

Whenever something is paused via the Plasma media controls, it cannot be unpaused with them. I posted about this on the r/kde subreddit (https://old.reddit.com/r/kde/comments/9uhl8k/does_anyone_else_have_this_problem_with_vlc/) and it was suggested I post a bug report after being given the following information:

That looks like a bug in VLC. It doesn't notify a change of the CanPlay property on DBus when it starts playing.

When VLC starts and we load the media controller, we query for CanPlay which is false at that point given no media is loaded yet. Then it loads media and starts playing, notifying a whole bunch of properties having changed (e.g. Metadata, PlaybackStatus and CanPause) but I never see any change notification for CanPause.

Reproducible when I click a video file on disk to open with VLC.

Edited by Jean-Baptiste Kempf